Complete UI overhaul WIP and UB text retrieval REST API is functional

--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/FateMeetsLuck/smcstudyapp#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   }
 }
