--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Contains the REST API for accessing texts as well as reading and writing annotations",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
